[metadata]
name = open-cli
summary = Generate client based on OpenAPI Specification and wrap it in a command line interface
description-file = README.md
author = Shay Arbov
author-email = shay.arbov@gmail.com
home-page = https://github.com/sharbov/open-cli
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    open_cli

[entry_points]
console_scripts =
    open-cli = open_cli.main:main
